arsoft-base (2.41) UNRELEASED; urgency=low

  * added ncdu to base packages
  * add nagios plugin for jenkins from https://github.com/Ericbla/check_jenkins

 -- Andreas Roth <aroth@arsoft-online.com>  Thu, 17 Jan 2013 18:57:38 +0100

arsoft-base (2.40) quantal; urgency=low

  * add root certificates to arsoft-base package
  * clean up

 -- Andreas Roth <aroth@arsoft-online.com>  Wed, 02 Jan 2013 16:14:25 +0100

arsoft-base (2.39) quantal; urgency=low

  * drop arsoft-python requirement
  * clean up

 -- Andreas Roth <aroth@arsoft-online.com>  Thu, 27 Dec 2012 11:50:11 +0100

arsoft-base (2.38) quantal; urgency=low

  * fixed missing file

 -- Andreas Roth <aroth@arsoft-online.com>  Wed, 26 Dec 2012 14:35:03 +0100

arsoft-base (2.37) quantal; urgency=low

  * remove system-info-check cron job
  * minor tweaks for scripts

 -- Andreas Roth <aroth@arsoft-online.com>  Wed, 26 Dec 2012 13:37:08 +0100

arsoft-base (2.36) quantal; urgency=low

  * improve slapd scripts

 -- Andreas Roth <aroth@arsoft-online.com>  Sat, 24 Nov 2012 10:17:29 +0100

arsoft-base (2.35) quantal; urgency=low

  * added auth_pass_file for openvpn configs
  * added nagios commands to test a remote dhcp server

 -- Andreas Roth <aroth@arsoft-online.com>  Tue, 13 Nov 2012 19:56:51 +0100

arsoft-base (2.34) quantal; urgency=low

  * fixed vizone script handling of zone serial > 8

 -- Andreas Roth <aroth@arsoft-online.com>  Fri, 09 Nov 2012 07:51:59 +0100

arsoft-base (2.33) quantal; urgency=low

  * fixed dhcp scripts for nslcd

 -- Andreas Roth <aroth@arsoft-online.com>  Sun, 04 Nov 2012 16:33:52 +0100

arsoft-base (2.32) quantal; urgency=low

  * improve mythtv-restart script to handle SIGHUP
  * prepare dhcp scripts for nss-ldapd

 -- Andreas Roth <aroth@arsoft-online.com>  Sun, 04 Nov 2012 16:33:31 +0100

arsoft-base (2.31) quantal; urgency=low

  * nagios script to check for package updates

 -- Andreas Roth <aroth@arsoft-online.com>  Sun, 28 Oct 2012 08:52:55 +0100
